tests/baselines/reference/classVarianceCircularity.errors.txt
tests/cases/compiler/classVarianceCircularity.ts(13,5): error TS7022: 'Value' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.


==== tests/cases/compiler/classVarianceCircularity.ts (1 errors) ====
    // Issue #52813
    
    function f() {
        const b = new Bar();
        // Uncomment to create error
        console.log(b.Value);
    }
    
    class Bar<T> {
        num!: number;
        // Or swap these two lines
        Field: number = (this as Bar<any>).num;
        Value = (this as Bar<any>).num;
        ~~~~~
!!! error TS7022: 'Value' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.
    }